# datamodel-final-frontend

./: .pdm-python  README.md  constants.py  main.py  pyproject.toml  query.py  requirements.txt
